Knife project displaces mesh #52251

Closed
opened 2017-08-02 13:13:36 +02:00 by Serge Lyatin · 6 comments

System Information
Win7 64bit

Blender Version
Broken: 2.78c

Short description of error
This is a matcap view after using Knife project tool.
Knife_project.png

Exact steps for others to reproduce the error
Open file, hit Knife project
Knife_project.blend

**System Information** Win7 64bit **Blender Version** Broken: 2.78c **Short description of error** This is a matcap view after using Knife project tool. ![Knife_project.png](https://archive.blender.org/developer/F690224/Knife_project.png) **Exact steps for others to reproduce the error** Open file, hit Knife project [Knife_project.blend](https://archive.blender.org/developer/F690223/Knife_project.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

True.
To be sure, I scaled all vertices on Z axis to zero before knife projecting.
Mesh analysis does show distortion.

md.png

Second image is triangulating face first, then making sure all vertices are on same plane.

md2.png

True. To be sure, I scaled all vertices on Z axis to zero before knife projecting. Mesh analysis does show distortion. ![md.png](https://archive.blender.org/developer/F690774/md.png) Second image is triangulating face first, then making sure all vertices are on same plane. ![md2.png](https://archive.blender.org/developer/F690792/md2.png)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 6c66e1bc83

This issue was referenced by 6c66e1bc836f9308347b94f3af35011d2dd06d66
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52251
No description provided.