Fix T52251: Knife cur displaces surface